# GraphPersonAnalyzer

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
cmake/modules/: CompilerOptions.cmake
include/analyzers/: DataNormalizer.hpp  EdgeAverage.hpp  GraphPersonAnalyzer.hpp
include/core/: Graph.hpp  IAnalyzer.hpp  Person.hpp
include/filters/: AgeFilter.hpp  CompositeFilter.hpp  GenderFilter.hpp  HeightFilter.hpp  IFilter.hpp  ResidenceFilter.hpp  WeightFilter.hpp
include/io/: CSVReader.hpp  ICSVReader.hpp
include/utils/: Exceptions.hpp  MathUtils.hpp
src/: CMakeLists.txt
src/analyzers/: DataNormalizer.cpp  EdgeAverage.cpp  GraphPersonAnalyzer.cpp
src/core/: Graph.cpp  Person.cpp
src/filters/: AgeFilter.cpp  CompositeFilter.cpp  GenderFilter.cpp  HeightFilter.cpp  IFilter.cpp  ResidenceFilter.cpp  WeightFilter.cpp
src/io/: CSVReader.cpp
src/utils/: Exceptions.cpp  MathUtils.cpp
test/: CMakeLists.txt  test_global.cpp
